# FirmwareFlash

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  codegen.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  stk500.rs
src/components/: CompilePanel.tsx  ComposedModuleItem.tsx  Composer.tsx  ConflictBanner.tsx  ErrorDisplay.tsx  FlashHistory.tsx  FlashPanel.tsx  InoPreview.tsx  MemoryBars.tsx  ModuleCard.tsx  ModuleLibrary.tsx  WiringDiagram.tsx  WiringPanel.tsx
src/conflicts/: detector.ts
src/errors/: troubleshooter.ts
src/hooks/: useHistory.ts
src/memory/: estimator.ts
src/modules/: blink.json  button-debounce.json  mqtt-publisher.json  oled-display.json  relay-trigger.json  rgb-led-fade.json  servo-control.json  temperature-logger.json  ultrasonic-distance.json  wifi-scanner.json
src/types/: fqbn.ts  module.ts  usb.ts
src/utils/: flashHistory.ts  recentBoards.ts
