[package]
name = "firmware-flash"
version = "0.1.0"
description = "Desktop app for flashing firmware to microcontrollers"
authors = ["Creator101-commits"]
edition = "2021"

[lib]
name = "firmware_flash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusb = "0.9"
serialport = "4"
